--- a/frontend/virtualservice.yaml
+++ b/frontend/virtualservice.yaml
@@ -22,7 +22,7 @@ spec:
               exact: dev
       route:
         - destination:
-            host: web-front-end.rest-api-with-mesh.svc.cluster.local
+            host: service-b.dev.svc.cluster.local
             port:
               number: 8080
     - match:
@@ -31,6 +31,15 @@ spec:
               exact: prod
       route:
         - destination:
-            host: product-api.product-ns-prod.svc.cluster.local
+            host: service-b.prod.svc.cluster.local
+            port:
+              number: 8080
+    - match:
+        - headers:
+            x-env-target:
+              exact: qa
+      route:
+        - destination:
+            host: service-b.qa.svc.cluster.local
             port:
               number: 8080
