--- a/backend/base/service-back-end.yaml
+++ b/backend/base/service-back-end.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: service-b
-    app.kubernetes.io/component: service-b
-    app.kubernetes.io/instance: service-b
-    app.kubernetes.io/name: service-b
+    app: backend
+    app.kubernetes.io/component: backend
+    app.kubernetes.io/instance: backend
+    app.kubernetes.io/name: backend
     app.kubernetes.io/part-of: app
-  name: service-b
+  name: backend
 spec:
   internalTrafficPolicy: Cluster
   ipFamilies:
@@ -19,6 +19,6 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: service-b
+    app: backend
   sessionAffinity: None
   type: ClusterIP
