--- a/backend/overlays/dev/deployment.yaml
+++ b/backend/overlays/dev/deployment.yaml
@@ -2,21 +2,21 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: service-b
+    app: backend
     version: v1
-    app.kubernetes.io/component: service-b
-    app.kubernetes.io/instance: service-b
-    app.kubernetes.io/name: service-b
+    app.kubernetes.io/component: backend
+    app.kubernetes.io/instance: backend
+    app.kubernetes.io/name: backend
     app.kubernetes.io/part-of: app
     app.openshift.io/runtime: quarkus
-  name: service-b-v1
+  name: backend-v1
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: service-b
+      app: backend
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -25,8 +25,8 @@ spec:
   template:
     metadata:
       labels:
-        app: service-b
-        deployment: service-b
+        app: backend
+        deployment: backend
         version: "v1"
     spec:
       containers:
@@ -39,7 +39,7 @@ spec:
         ports:
         - containerPort: 8080
         imagePullPolicy: Always
-        name: service-b
+        name: backend
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
