--- a/frontend/kustomization.yaml
+++ b/frontend/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: frontend-ns
 
 resources:
   - namespace.yaml 
+  - rolebinding.yaml
   - deployment.yaml
   - service.yaml 
   - route.yaml
